--- a/Blooger/css/Style.css
+++ b/Blooger/css/Style.css
@@ -69,12 +69,21 @@ button.btn {
   cursor: pointer;
 }
 
-span{
+span {
   font-family: var(--Abel);
 }
 
-.container{
+.container {
   margin: 0 5vw;
+}
+
+.text-gray {
+  color: var(--text-gray);
+}
+
+p {
+  font-family: var(--Lexend);
+  color: var(--text-light);
 }
 /* ----------x----------- Global Classes ----------x----------- */
 
@@ -181,17 +190,17 @@ main .site-title .btn {
   background: var(--sky);
 }
 
-main .site-title .btn:hover{
-  background:transparent;
+main .site-title .btn:hover {
+  background: transparent;
   border: 1px solid var(--white);
-  color:var(--white);
+  color: var(--white);
 }
 
-main .blog-content span{
+main .blog-content span {
   display: block;
 }
 
-section .container .owl-nav{
+section .container .owl-nav {
   position: absolute;
   top: 0;
   margin: 0 auto;
@@ -199,37 +208,37 @@ section .container .owl-nav{
 }
 
 .owl-nav .owl-prev .owl-nav-prev,
-.owl-nav .owl-next .owl-nav-next{
-  color:var(--text-gray);
-  background:transparent;
+.owl-nav .owl-next .owl-nav-next {
+  color: var(--text-gray);
+  background: transparent;
   font-size: 2rem;
 }
 
-.owl-theme .owl-nav [class*='owl-']:hover{
-  background:transparent;
-  color:var(--midnight);
+.owl-theme .owl-nav [class*="owl-"]:hover {
+  background: transparent;
+  color: var(--midnight);
 }
 
-.owl-theme .owl-nav [class*='owl-']{
+.owl-theme .owl-nav [class*="owl-"] {
   outline: none;
 }
 /* -----------x---------- Site title -----------x---------- */
 
 /* ---------------------- Blog Carousel ---------------------- */
-main .blog{
-  background:url('../assets/Abract01.png');
+main .blog {
+  background: url("../assets/Abract01.png");
   background-repeat: no-repeat;
   background-position: right;
-  height:100vh;
+  height: 100vh;
   width: 100%;
   background-size: 65%;
 }
 
-main .blog .blog-post{
+main .blog .blog-post {
   padding-top: 6rem;
 }
 
-main .blog-post .blog-content{
+main .blog-post .blog-content {
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -238,18 +247,162 @@ main .blog-post .blog-content{
   box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
 }
 
-main .blog-content .blog-title{
+main .blog-content .blog-title {
   padding: 2rem 0;
 }
 
-main .blog-content .btn-blog{
-  padding: .7rem 2rem;
-  background:var(--sky);
-  margin: .5rem;
+main .blog-content .btn-blog {
+  padding: 0.7rem 2rem;
+  background: var(--sky);
+  margin: 0.5rem;
 }
 /* -----------x---------- Blog Carousel -----------x---------- */
 
-/* -----------x---------- Site title -----------x---------- */
+/* ---------------------- Site Content ---------------------- */
+main .site-content {
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+
+main .post-content {
+  width: 100%;
+}
+
+main .site-content .post-content > .post-image,
+.post-title {
+  padding: 1rem 2rem;
+  position: relative;
+}
+
+main .site-content .post-content > .post-image .post-info {
+  background: var(--sky);
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 20vw;
+  border-radius: 3rem;
+}
+
+main .site-content .post-content > .post-image > div {
+  overflow: hidden;
+}
+
+main .site-content .post-content > .post-image .img {
+  width: 100%;
+  transition: all 1s ease;
+}
+
+main .site-content .post-content > .post-image .img:hover {
+  transform: scale(1.3);
+}
+
+main .site-content .post-content > .post-image .post-info span {
+  margin: 0.5rem;
+}
+
+main .post-content .post-title a {
+  font-family: var(--Anton);
+  font-size: 1.5rem;
+}
+
+.site-content .post-content .post-title .post-btn {
+  border-radius: 0;
+  padding: 0.7rem 1.5rem;
+  background: var(--sky);
+}
+
+.site-content .pagination {
+  justify-content: center;
+  color: var(--text-light);
+  margin: 4rem 0;
+}
+
+.site-content .pagination a {
+  display: block;
+  padding: 0.6rem 0.9rem;
+  border-radius: 2rem;
+  margin: 0 0.3rem;
+  font-family: var(--Lexend);
+}
+
+.site-content .pagination .pages {
+  background: var(--text-gray);
+  color: var(--white);
+}
+/* -----------x---------- Site Content -----------x---------- */
+
+/* ---------------------- Sidebar ---------------------- */
+.site-content > .sidebar .category-list {
+  font-family: var(--Livvic);
+}
+
+.site-content > .sidebar .category-list .list-items {
+  background: var(--sky);
+  padding: 0.4rem 1rem;
+  margin: 0.8rem 0;
+  border-radius: 3rem;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+.site-content > .sidebar .category-list .list-items a {
+  color: black;
+}
+
+.site-content .sidebar .popular-post .post-content {
+  padding: 1rem 0;
+}
+
+.site-content .sidebar .popular-post h2 {
+  padding-top: 8rem;
+}
+
+.site-content .sidebar .popular-post .post-info {
+  padding: 0.4rem 0.1rem !important;
+  bottom: 0rem !important;
+  left: 1.5rem !important;
+  border-radius: 0rem !important;
+  background: white !important;
+}
+
+.site-content .sidebar .popular-post .post-title a {
+  font-size: 1rem;
+}
+
+.site-content .sidebar .newsletter {
+  padding-top: 10rem;
+}
+
+.site-content .sidebar .newsletter .form-element {
+  padding: 0.5rem 2rem;
+}
+
+.site-content .sidebar .newsletter .input-element {
+  width: 80%;
+  height: 1.9rem;
+  padding: 0.3rem 0.5rem;
+  font-family: var(--Lexend);
+  font-size: 1rem;
+}
+
+.site-content .sidebar .newsletter .form-btn {
+  border-radius: 0;
+  padding: 0.8rem 32%;
+  margin: 1rem 0;
+  background: var(--sky);
+}
+
+.site-content .sidebar .popular-tags {
+  padding: 5rem 0;
+}
+
+.site-content .sidebar .popular-tags .tags .tag {
+  background: var(--sky);
+  padding: 0.4rem 1rem;
+  border-radius: 3rem;
+  margin: 0.4rem .6rem;
+}
+/* -----------x---------- Sidebar -----------x---------- */
 
 /* -----------x---------- Main Content -----------x---------- */
 
